--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <span></span>
     <span></span>
   </div>
-  <h1>Happy Rose Day! 🌹</h1>
-  <p>Every rose is a reminder of how special you are to me.</p>
+  <h1>Happy Rose Day!Dumbo❤️ 🌹</h1>
+  <p>What if I couldn't give you a real one, you are still the most lovable person for me.</p>
   <img class="rose" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Rosa_rubiginosa_1.jpg/320px-Rosa_rubiginosa_1.jpg" alt="Rose">
 
 
