--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Rose Day! 🌹</title>
+  <title>Happy Rose Day!Dumbo❤️ 🌹</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -24,7 +24,7 @@
       animation: slideUp 2s ease-in-out;
     }
     .rose {
-      width: 500px;
+      width: 250px;
       animation: float 4s infinite ease-in-out;
     }
     @keyframes fadeIn {
@@ -99,7 +99,7 @@
   </div>
   <h1>Happy Rose Day!Dumbo❤️ 🌹</h1>
   <p>What if I couldn't give you a real one, you are still the most lovable person for me.</p>
-  <img class="rose" src="Rose -1.jpg" alt="Rose">
+  <img class="rose" src="Rose -1.png" alt="Rose">
 
 
   <script>
