--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
   <h1>Happy Rose Day!Dumbo❤️ 🌹</h1>
   <p>What if I couldn't give you a real one, you are still the most lovable person for me.</p>
-  <img class="rose" src="Rose -1.png" alt="Rose">
+  <img class="rose" src="Rose -1-min.png" alt="Rose">
 
 
   <script>
